# rapidsnark

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DOCKER_CACHE.md  DOCKER_MULTISTAGE.md  Dockerfile.arm64  Dockerfile.arm64.witgen  Dockerfile.dev  Makefile  PROOF_VERIFICATION.md  README.md  README_WITGEN_ARM64.md  WITGEN_ARM64_FILES.md  build_circuit.sh  build_gmp.sh  build_pistache.sh  docker-compose.arm64.yml  package-lock.json  package.json  tasksfile.js
circuits/: 02x03.circom
cmake/: platform.cmake
src/: CMakeLists.txt  binfile_utils.cpp  cuda.cpp  cuda.hpp  fullprover.cpp  fullprover.hpp  groth16.cpp  groth16.hpp  groth16.tpp  main_proofserver.cpp  main_prover.cpp  prover.cpp
tools/: request.js
zkeys/: 02x03.vkey.json
